<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.michael.michaelvanderzwet_pset1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="350dp">

            <ImageView
                android:id="@+id/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/body" />

            <ImageView
                android:id="@+id/arms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:srcCompat="@drawable/arms" />

            <ImageView
                android:id="@+id/ears"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:srcCompat="@drawable/ears" />

            <ImageView
                android:id="@+id/eyebrows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:srcCompat="@drawable/eyebrows" />

            <ImageView
                android:id="@+id/eyes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:srcCompat="@drawable/eyes" />

            <ImageView
                android:id="@+id/glasses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:srcCompat="@drawable/glasses" />

            <ImageView
                android:id="@+id/hat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:srcCompat="@drawable/hat" />

            <ImageView
                android:id="@+id/mouth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:srcCompat="@drawable/mouth" />

            <ImageView
                android:id="@+id/mustache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:srcCompat="@drawable/mustache" />

            <ImageView
                android:id="@+id/nose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:srcCompat="@drawable/nose" />

            <ImageView
                android:id="@+id/shoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:srcCompat="@drawable/shoes" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/neus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Neus"
                    android:onClick="CheckBoxClicked" />

                <CheckBox
                    android:id="@+id/mond"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Mond"
                    android:onClick="CheckBoxClicked"/>

                <CheckBox
                    android:id="@+id/snor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Snor"
                    android:onClick="CheckBoxClicked"/>

                <CheckBox
                    android:id="@+id/schoenen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Schoenen"
                    android:onClick="CheckBoxClicked"/>

                <CheckBox
                    android:id="@+id/armen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Armen"
                    android:onClick="CheckBoxClicked"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/hoed"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Hoed"
                    android:onClick="CheckBoxClicked"/>

                <CheckBox
                    android:id="@+id/oren"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Oren"
                    android:onClick="CheckBoxClicked"/>

                <CheckBox
                    android:id="@+id/bril"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Bril"
                    android:onClick="CheckBoxClicked"/>

                <CheckBox
                    android:id="@+id/ogen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Ogen"
                    android:onClick="CheckBoxClicked"/>

                <CheckBox
                    android:id="@+id/wenkbrauwen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Wenkbrauwen"
                    android:onClick="CheckBoxClicked"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
